# hf_agents_final_project

./: README.md  agent_sandbox.ipynb  agent_testing.py  gaia_agent.py  pyproject.toml  requirements.txt
resources/: test_python.py
tools/: __init__.py  download_task_files_tool.py  read_documents_tool.py  read_tables_tool.py  transcribe_audio_tool.py  youtube_query_tool.py
