[project]
name = "hf-agents-final-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.26.0",
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.1.3",
    "langchain-openai>=0.3.14",
    "langchain-tavily>=0.1.5",
    "langgraph>=0.3.34",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "tqdm>=4.67.1",
]
